--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC
+    url: jdbc:mysql://lab3-mysql:3306/mydb?serverTimezone=Europe/Kiev
     username: root
     password: Fredikfs123456
     driver-class-name: com.mysql.jdbc.Driver
@@ -14,5 +14,5 @@ spring:
       naming-strategy: org.hibernate.cfg.ImprovedNamingStrategy
 
 server:
-  port: 8080
+  port: 10222
 
